Fix overflow for smaller screens and large screens.

--- a/src/css/homepage.scss
+++ b/src/css/homepage.scss
@@ -7,3 +7,8 @@
   overflow: hidden;  
 }
 
+@media (min-width: 1440px) {
+  .homepage {
+    overflow: hidden;  
+  }
+}
